--- a/SeeYue/CSS/code-block/code-lang.css
+++ b/SeeYue/CSS/code-block/code-lang.css
@@ -4,7 +4,7 @@
 
 /* 代码语言显示【右侧】 */
 #write pre::after {
-  font-family   : "HarmonyOS-Sans";
+  font-family   : "Monaco";
   font-weight   : bolder;
   font-size     : var(--code-block-right-program-lang-text-size);
   letter-spacing: 1px;
