--- a/SeeYue/CSS/to-pdf.css
+++ b/SeeYue/CSS/to-pdf.css
@@ -54,7 +54,7 @@
 
     .footnotes-area {
         font-size: .85rem;
-        font-family: "HarmonyOS-Regular";
+        font-family: "霞鹜文楷";
         color: #777 !important;
         line-height: 1.5;
     }
