--- a/SeeYue/CSS/fonts.css
+++ b/SeeYue/CSS/fonts.css
@@ -5,7 +5,7 @@
 /* ——————————————————————————————— 中文字体 ——————————————————————————————— */
 /* 目录中文 */
 @font-face {
-    font-family: "玄宋45S";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
@@ -19,59 +19,59 @@
 
 /* 标题、加粗 */
 @font-face {
-    font-family: "HarmonyOS-Bold";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
 
 /* 正文中文 */
 @font-face {
-    font-family: "HarmonyOS-Regular";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
 
 /* 标点符号 */
 @font-face {
-    font-family: "Zhudou";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
 
 /* ——————————————————————————————— 英文字体 ——————————————————————————————— */
 @font-face {
-    font-family: "Lora-Regular";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
 
 @font-face {
-    font-family: "Lora-Bold";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
 }
 
 /* 行间代码 */
 @font-face {
-    font-family: "Fira";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
 }
 
 /* 右键菜单英文 */
 @font-face {
-    font-family: "RobotoMono";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
 }
 
 /* 引用块、侧边栏、正文英文 */
 @font-face {
-    font-family: "HarmonyOS-Sans";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
 
 /* Typora 默认显示 HTML 代码的字体 */
 @font-face {
-    font-family: "Lucida";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
 }
 
@@ -85,7 +85,7 @@
 
 /* 只能显示 脚注文件大纲查找 */
 @font-face {
-    font-family: "三极古拙楷书简";
+    font-family: "霞鹜文楷";
     src: url("../Fonts/common-fonts/LXGWWenKaiScreen.woff2");
     font-display: swap;
 }
