--- a/SeeYue/CSS/sidebar/flie-page-footer.css
+++ b/SeeYue/CSS/sidebar/flie-page-footer.css
@@ -122,7 +122,7 @@
     /* 「最近使用的目录」文字 */
 #ty-sidebar-footer #sidebar-files-menu li:nth-child(8) > span:first-child {
     color: var(--footer-files-menu-tips-line-text-color);
-    font-family: "HarmonyOS-Bold";
+    font-family: "霞鹜文楷";
 }
 
 #ty-sidebar-footer #sidebar-files-menu li:nth-child(7) > span:first-child {
