--- a/SeeYue/CSS/sidebar/sidebar.css
+++ b/SeeYue/CSS/sidebar/sidebar.css
@@ -23,7 +23,7 @@
 
 /* 侧边栏顶部文字 */
 .info-panel-tab-title {
-    font-family: "三极古拙楷书简";
+    font-family: "霞鹜文楷";
     font-size: var(--sidebar-topBar-content-size) !important;
     line-height: 1.2rem;
     padding-bottom: var(--topBar-content-bottom-line-distance);
