--- a/SeeYue/CSS/to-pdf.css
+++ b/SeeYue/CSS/to-pdf.css
@@ -51,10 +51,9 @@
 
 /* 脚注设置 */
 @media print {
-
     .footnotes-area {
         font-size: .85rem;
-        font-family: "霞鹜文楷";
+        font-family: "霞鹜文楷", serif;
         color: #777 !important;
         line-height: 1.5;
     }
