--- a/see-yue-dark.css
+++ b/see-yue-dark.css
@@ -106,23 +106,13 @@
 /* 22 导出 PDF 设置 */
 @import "./SeeYue/CSS/to-pdf.css";
 
-/* 23 网站 Icon */
-@import "./SeeYue/CSS/website-icon/website-icon.css";
-
-/* 23.1 生活类网站 */
-@import "./SeeYue/CSS/website-icon/lives.css";
-
-/* 23.2 工具类网站 */
-@import "./SeeYue/CSS/website-icon/tools.css";
-
-/* 23.3 资源类网站 */
-@import "./SeeYue/CSS/website-icon/resources.css";
-
-/* 23.4 编程类网站 */
-@import "./SeeYue/CSS/website-icon/programs.css";
-
-/* 23.5 笔记软件类网站 */
-@import "./SeeYue/CSS/website-icon/notes-software.css";
+/* 23 网站 Icon - 已注释，文件不存在 */
+/* @import "./SeeYue/CSS/website-icon/website-icon.css"; */
+/* @import "./SeeYue/CSS/website-icon/lives.css"; */
+/* @import "./SeeYue/CSS/website-icon/tools.css"; */
+/* @import "./SeeYue/CSS/website-icon/resources.css"; */
+/* @import "./SeeYue/CSS/website-icon/programs.css"; */
+/* @import "./SeeYue/CSS/website-icon/notes-software.css"; */
 
 /* 24 用户自定义【明亮主题】代码 */
 @import "./SeeYue/CSS/custom/custom-dark.css";
