--- a/see-yue-dark.css
+++ b/see-yue-dark.css
@@ -1,8 +1,8 @@
 /* 01 全局字体引用 */
-/*@import "./SeeYue/CSS/global-font.css";*/
+@import "./SeeYue/CSS/global-font.css";
 
 /* 02 字体引用 */
-@import "./SeeYue/CSS/fonts.css";
+/*@import "./SeeYue/CSS/fonts.css";*/
 
 /* 03 配置文件 */
 @import "./SeeYue/CSS/configs/dark-config.css";
@@ -106,13 +106,6 @@
 /* 22 导出 PDF 设置 */
 @import "./SeeYue/CSS/to-pdf.css";
 
-/* 23 网站 Icon - 已注释，文件不存在 */
-/* @import "./SeeYue/CSS/website-icon/website-icon.css"; */
-/* @import "./SeeYue/CSS/website-icon/lives.css"; */
-/* @import "./SeeYue/CSS/website-icon/tools.css"; */
-/* @import "./SeeYue/CSS/website-icon/resources.css"; */
-/* @import "./SeeYue/CSS/website-icon/programs.css"; */
-/* @import "./SeeYue/CSS/website-icon/notes-software.css"; */
 
 /* 24 用户自定义【明亮主题】代码 */
 @import "./SeeYue/CSS/custom/custom-dark.css";
