--- a/see-yue-salt.css
+++ b/see-yue-salt.css
@@ -1,8 +1,8 @@
 /* 01 全局字体引用 */
-/* @import "./SeeYue/CSS/global-font.css"; */
+@import "./SeeYue/CSS/global-font.css";
 
 /* 02 字体引用 */
-@import "./SeeYue/CSS/fonts.css";
+/*@import "./SeeYue/CSS/fonts.css";*/
 
 /* 03 配置文件 */
 @import "./SeeYue/CSS/configs/salt-config.css";
@@ -108,24 +108,6 @@
 
 /* 22 导出 PDF 设置 */
 @import "./SeeYue/CSS/to-pdf.css";
-
-/* 23 网站 Icon */
-@import "./SeeYue/CSS/website-icon/website-icon.css";
-
-/* 23.1 生活类网站 */
-@import "./SeeYue/CSS/website-icon/lives.css";
-
-/* 23.2 工具类网站 */
-@import "./SeeYue/CSS/website-icon/tools.css";
-
-/* 23.3 资源类网站 */
-@import "./SeeYue/CSS/website-icon/resources.css";
-
-/* 23.4 编程类网站 */
-@import "./SeeYue/CSS/website-icon/programs.css";
-
-/* 23.5 笔记软件类网站 */
-@import "./SeeYue/CSS/website-icon/notes-software.css";
 
 /* 24 用户自定义【明亮主题】代码 */
 @import "./SeeYue/CSS/custom/custom-salt.css";
