--- a/SeeYue/CSS/code-block/dark-theme.css
+++ b/SeeYue/CSS/code-block/dark-theme.css
@@ -45,11 +45,11 @@
 }
 
 .cm-s-inner span.cm-atom {
-    color: #b48ead;
+    color: #C678DD;  /* JSON 布尔值/null：明亮的紫色，突出特殊值 */
 }
 
 .cm-s-inner span.cm-number {
-    color: #b48ead;
+    color: #D19A66;  /* JSON 数字：温暖的橙色，与字符串区分明显 */
 }
 
 .cm-s-inner span.cm-comment.cm-attribute {
@@ -70,7 +70,7 @@
 
 .cm-s-inner span.cm-property,
 .cm-s-inner span.cm-attribute {
-    color: #8FBCBB;
+    color: #88C0D0;  /* JSON 属性名：更明亮的青色，提升可读性 */
 }
 
 .cm-s-inner span.cm-keyword {
@@ -82,7 +82,7 @@
 }
 
 .cm-s-inner span.cm-string {
-    color: #A3BE8C;
+    color: #98C379;  /* JSON 字符串值：柔和的绿色，更舒适 */
 }
 
 .cm-s-inner span.cm-variable {
@@ -103,7 +103,7 @@
 }
 
 .cm-s-inner span.cm-bracket {
-    color: #81A1C1;
+    color: #7C8A99;  /* JSON 括号：柔和的蓝灰色，不抢眼但清晰 */
 }
 
 .cm-s-inner span.cm-tag {
