--- a/see-yue-salt.css
+++ b/see-yue-salt.css
@@ -44,7 +44,7 @@
 @import "./SeeYue/CSS/table/auto-scroll.css";
 
 /* 12.2 全宽 + 滚动显示 */
-/* @import "./SeeYue/CSS/table/full-scroll.css"; */
+ @import "./SeeYue/CSS/table/full-scroll.css";
 
 /* 13 引用块样式 */
 @import "./SeeYue/CSS/blockquote.css";
