--- a/SeeYue/CSS/custom/custom-dark.css
+++ b/SeeYue/CSS/custom/custom-dark.css
@@ -37,3 +37,24 @@
     background-color: #252525 !important;
     color: #d4d4d4 !important;
 }
+
+/* 修复侧边栏文件重命名输入框颜色问题 */
+#file-library-tree input,
+#file-library-list input,
+.file-node-input,
+.file-tree-node input,
+.file-list-item input {
+    color: #d4d4d4 !important;
+    background-color: #2b2b2b !important;
+    -webkit-text-fill-color: #d4d4d4 !important;
+}
+
+#file-library-tree input:focus,
+#file-library-list input:focus,
+.file-node-input:focus,
+.file-tree-node input:focus,
+.file-list-item input:focus {
+    color: #ffffff !important;
+    background-color: #2b2b2b !important;
+    -webkit-text-fill-color: #ffffff !important;
+}
